--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.6.1'
 }
